<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_line" />

    <!-- 分隔线 -->
    <View
        android:id="@+id/view_line"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#DCDBDB"
        android:layout_above="@+id/linearLayoutBelow"/>

    <!-- 底部tab -->
    <LinearLayout
        android:id="@+id/linearLayoutBelow"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:background="@color/linearLayout_below_color">

        <RelativeLayout
            android:id="@+id/main_page_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/main_page_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/main_page_selector"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/main_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_page_iv"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:textColor="@drawable/tab_text_color_selector"
                android:text="@string/bottom_tab_main"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/repair_page_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/repair_page_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/repair_page_selector"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/repair_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repair_page_iv"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:textColor="@drawable/tab_text_color_selector"
                android:text="@string/bottom_tab_repair"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maintain_page_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/maintain_page_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                app:srcCompat="@drawable/maintain_page_selector"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/maintain_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maintain_page_iv"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:textColor="@drawable/tab_text_color_selector"
                android:text="@string/bottom_tab_maintain"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_page_rl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/mine_page_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/mine_page_selector"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/mine_page_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_page_iv"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:textColor="@drawable/tab_text_color_selector"
                android:text="@string/bottom_tab_mine"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <!-- 内容部分， fragment切换 -->
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_line" />

</RelativeLayout>
